not good scroll commit

--- a/client-web/src/components/Chat_/MessageList.module.css
+++ b/client-web/src/components/Chat_/MessageList.module.css
@@ -9,6 +9,18 @@
     background-color: #fff;
 }
 
+.loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    z-index: 100;
+}
+
 .scroll {
     position: relative;
     height: 100%;
