--- a/client-web/src/components/Chat_/MessageInput.module.css
+++ b/client-web/src/components/Chat_/MessageInput.module.css
@@ -35,3 +35,9 @@
     outline: none;
     background-color: #c6e3fa;
 }
+
+.right-tools {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
