--- a/client-web/src/components/Chat_/Message/Message.scss
+++ b/client-web/src/components/Chat_/Message/Message.scss
@@ -36,6 +36,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+        width: 42px;
     }
 
     .avatar {
