hide actions from thread messages

--- a/client-web/src/components/Chat_/ChatSidebar.module.css
+++ b/client-web/src/components/Chat_/ChatSidebar.module.css
@@ -2,6 +2,7 @@
     order: 0;
     height: 100%;
     max-width: 320px;
+    min-width: 320px;
     flex-basis: 35%;
     border-right: solid 1px #d1dbe3;
 }
