sending text to thread

--- a/client-web/src/components/Chat_/MessageInput.scss
+++ b/client-web/src/components/Chat_/MessageInput.scss
@@ -41,3 +41,33 @@
     align-items: center;
     justify-content: center;
 }
+
+.file-dialog {
+    border: 1px solid red;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1000;
+
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    .inner {
+        padding: 20px;
+        background-color: white;
+        border-radius: 10px;
+        width: 100%;
+        max-width: 300px;
+    }
+
+    .preview-image {
+        width: 100%;
+        max-height: 500px;
+    }
+
+}
