chat input with draft

--- a/client-web/src/libs/ChatApp2/components/ChatListItem/ChatListItem.scss
+++ b/client-web/src/libs/ChatApp2/components/ChatListItem/ChatListItem.scss
@@ -1,5 +1,8 @@
 .ChatListItem {
     display: flex;
+    padding-top: 10px;
+    padding: 10px;
+    cursor: pointer;
 
     &_selected {
         background-color: #d5e7f5;
