--- a/client-web/src/libs/ChatApp2/components/ChatMessage/ChatMessage.scss
+++ b/client-web/src/libs/ChatApp2/components/ChatMessage/ChatMessage.scss
@@ -1,3 +1,64 @@
 .ChatMessage {
-    height: 80px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    align-items: center;
+    flex-shrink: 0;
+
+    .Message__system {
+        flex: 1;
+        text-align: center;
+        color: rgb(110, 169, 215);
+        font-size: 0.8em;
+        justify-content: center;
+    }
+
+    &_sent {
+        align-items: flex-end;
+
+        .Message__container_outer {
+            flex-direction: row-reverse;
+        }
+
+        .Message__container {
+            margin-right: 82px;
+        }
+
+        .Message__avatar + .Message__container {
+            margin-right: 0;
+        }
+    }
+
+    &_received {
+        align-items: flex-start;
+
+        .Message__container {
+            margin-left: 82px;
+        }
+
+        .Message__avatar + .Message__container {
+            margin-left: 0;
+        }
+    }
+
+    .Message__container_outer {
+        display: flex;
+    }
+
+    .Message__avatar {
+        padding: 20px;
+    }
+
+    .Message__container {
+        display: flex;
+        flex-direction: column;
+        padding: 25px;
+        background-color: #c6e3fa;
+        max-width: 50%;
+        border-radius: 20px;
+        min-width: 300px;
+        overflow: hidden;
+        word-wrap: break-word;
+    }
+
 }
