--- a/client-web/src/pages/Signon/Auth/Wrapper.scss
+++ b/client-web/src/pages/Signon/Auth/Wrapper.scss
@@ -2,4 +2,9 @@
   font-family: "Varela Round", sans-serif;
   font-weight: 400;
   font-style: normal;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 5.5% 10%;
+  background-image: url("../Icons/circles.svg");
 }
